5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4144/executions/1800_2569.log
== TEST (2019-06-10 12:33:41) 
-- CODE:
from numpy import *
x = array(eval(input("digite o vetor: ")))
m = sum(x)/size(x)
for i in range(size(x)):
	d = ((x[i] - m)**0.5)/size(x)-1
print(round(d,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 12:35:20) 
-- CODE:
from numpy import *
x = array(eval(input("digite o vetor: ")))
m = sum(x)/size(x)
for i in range(size(x)):
	d = (((x[i] - m)**2)/size(x)-1)**0.5
print(round(d,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 12:37:41) 
-- CODE:
from numpy import *
x = array(eval(input("digite o vetor: ")))
m = sum(x)/size(x)
for i in range(size(x)):
	d = (((x[i] - m)**2)/size(x)-1)**0.5
	d = d + 1
print(round(d,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 12:38:07) 
-- CODE:
from numpy import *
x = array(eval(input("digite o vetor: ")))
m = sum(x)/size(x)
for i in range(size(x)):
	d = 0
	d = (((x[i] - m)**2)/size(x)-1)**0.5
	d = d + 1
print(round(d,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 12:39:10) 
-- CODE:
from numpy import *
x = array(eval(input("digite o vetor: ")))
m = sum(x)/size(x)
d = 0
while(i<size(x)):
	d = (((x[i] - m)**2)/size(x)-1)**0.5
	d = d + 1
print(round(d,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 12:39:31) 
-- CODE:
from numpy import *
x = array(eval(input("digite o vetor: ")))
m = sum(x)/size(x)
d = 0
while(d<size(x)):
	d = (((x[i] - m)**2)/size(x)-1)**0.5
	d = d + 1
print(round(d,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 12:39:46) 
-- CODE:
from numpy import *
x = array(eval(input("digite o vetor: ")))
m = sum(x)/size(x)
d = 0
while(d<size(x)):
	d = (((x[d] - m)**2)/size(d)-1)**0.5
	d = d + 1
print(round(d,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 12:40:10) 
-- CODE:
from numpy import *
x = array(eval(input("digite o vetor: ")))
m = sum(x)/size(x)
d = 0
while(d<size(x)):
	d = (((x[d] - m)**2)/size(d)-1)**0.5
	d = d + 1
print(round(d,3))
-- EXECUTION TIME:
1.27689
-- TEST CASE 1:
---- input:
[-4,250,-1,30,12]
---- correct output:
108.498
---- user output:
62.392
-- TEST CASE 2:
---- input:
[12.5,25.2,50.39,47.3,0.9]
---- correct output:
21.526
---- user output:
15.724
-- TEST CASE 3:
---- input:
[1.5,1.9,1.2,1.3,1.4,1.1,1.75]

---- correct output:
0.29
---- user output:
nan
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 12:40:23) 
-- CODE:
from numpy import *
x = array(eval(input("digite o vetor: ")))
m = sum(x)/size(x)
for i in range(size(x)):
	d = (((x[i] - m)**2)/size(x)-1)**0.5
	d = d + 1
print(round(d,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 12:40:23) 
-- CODE:
from numpy import *
x = array(eval(input("digite o vetor: ")))
m = sum(x)/size(x)
for i in range(size(x)):
	d = (((x[i] - m)**2)/size(x)-1)**0.5
	d = d + 1
print(round(d,3))
-- EXECUTION TIME:
1.20734
-- TEST CASE 1:
---- input:
[-4,250,-1,30,12]
---- correct output:
108.498
---- user output:
21.279
-- TEST CASE 2:
---- input:
[12.5,25.2,50.39,47.3,0.9]
---- correct output:
21.526
---- user output:
12.745
-- TEST CASE 3:
---- input:
[1.5,1.9,1.2,1.3,1.4,1.1,1.75]

---- correct output:
0.29
---- user output:
nan
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 12:40:50) 
-- CODE:
from numpy import *
x = array(eval(input("digite o vetor: ")))
m = sum(x)/size(x)
for i in range(size(x)):
	d = (((x[i] - m)**2)/size(x)-1)**0.5
	d = d + 1
print(round(d,3))
print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 12:41:31) 
-- CODE:
from numpy import *
x = array(eval(input("digite o vetor: ")))
m = sum(x)/size(x)
for i in range(size(x)):
	d = (((x[i] - m)**2)/size(x)-1)**0.5
	d = d + 1
print(round(d,3))
print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 12:41:45) 
-- CODE:
from numpy import *
x = array(eval(input("digite o vetor: ")))
m = sum(x)/size(x)
for i in range(size(x)):
	d = (((x[i] - m)**2)/size(x)-1)**0.5
	d = d + 1
print(round(d,3))
print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 12:42:00) 
-- CODE:
from numpy import *
x = array(eval(input("digite o vetor: ")))
m = sum(x)/size(x)
for i in range(size(x)):
	d = (((x[i] - m)**2)/size(x)-1)**0.5
	d = d + 1
print(round(d,3))
print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 12:42:55) 
-- CODE:
from numpy import *
x = array(eval(input("digite o vetor: ")))
m = sum(x)/size(x)
for i in range(size(x)):
	d = (((x[i] - m)**2)/size(x)-1)**0.5
	d = d + 1
print(round(d,3))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:55:54) 
-- CODE:
from numpy import *
x = array(eval(input("digite o vetor: ")))
m = sum(x)/size(x)
for i in range(size(x)):
	k = (x[i] - m)**2
	k = k + 1
d = (k/(size(x)-1))**0.5
print(round(d,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 10:56:10) 
-- CODE:
from numpy import *
x = array(eval(input("digite o vetor: ")))
m = sum(x)/size(x)
for i in range(size(x)):
	k = (x[i] - m)**2
	k = k + 1
d = (k/(size(x)-1))**0.5
print(round(d,3))
-- EXECUTION TIME:
1.09939
-- TEST CASE 1:
---- input:
[-4,250,-1,30,12]
---- correct output:
108.498
---- user output:
22.706
-- TEST CASE 2:
---- input:
[12.5,25.2,50.39,47.3,0.9]
---- correct output:
21.526
---- user output:
13.188
-- TEST CASE 3:
---- input:
[1.5,1.9,1.2,1.3,1.4,1.1,1.75]

---- correct output:
0.29
---- user output:
0.426
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:57:52) 
-- CODE:
from numpy import *
x = array(eval(input("digite o vetor: ")))
m = sum(x)/size(x)
for i in range(size(x)):
	k = (x[i] - m)**2
	k = k + 1
d = (k/(size(x)))**0.5
print(round(d,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:58:45) 
-- CODE:
from numpy import *
from math import *
x = array(eval(input("digite o vetor: ")))
m = sum(x)/size(x)
for i in range(size(x)):
	k = (x[i] - m)**2
	k = k + 1
d = sqrt((k/(size(x)-1))
print(round(d,3))
-- ERROR:
File "XXXX", line 9
    print(round(d,3))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:59:31) 
-- CODE:
from numpy import *
from math import *
x = array(eval(input("digite o vetor: ")))
m = sum(x)/size(x)
for i in range(size(x)):
	k = (x[i] - m)**2
	k = k + 1
d = sqrt(k/(size(x)-1)
print(round(d,3))
-- ERROR:
File "XXXX", line 9
    print(round(d,3))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:59:52) 
-- CODE:
from numpy import *
from math import *
x = array(eval(input("digite o vetor: ")))
m = sum(x)/size(x)
for i in range(size(x)):
	k = (x[i] - m)**2
	k = k + 1
d = sqrt(k/(size(x)-1))
print(round(d,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:02:11) 
-- CODE:
from numpy import *
from math import *
x = array(eval(input("digite o vetor: ")))
m = sum(x)/size(x)
for i in x:
	k = (i-m)**2
	k = k + 1
d = sqrt(k/(size(x)-1))
print(round(d,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:03:28) 
-- CODE:
from numpy import *
from math import *
x = array(eval(input("digite o vetor: ")))
m = sum(x)/size(x)
for i in x:
	k = (i-m)**2
	k = k + 1
d = sqrt(sum(k)/(size(x)-1))
print(round(d,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:05:52) 
-- CODE:
from numpy import *
from math import *
x = array(eval(input("digite o vetor: ")))
m = sum(x)/size(x)
for i in x:
	k = k+(i-m)**2
	k = k + 1
d = sqrt(k/(size(x)-1))
print(round(d,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:06:07) 
-- CODE:
from numpy import *
from math import *
x = array(eval(input("digite o vetor: ")))
m = sum(x)/size(x)
for i in x:
	k = 0
	k = k+(i-m)**2
	k = k + 1
d = sqrt(k/(size(x)-1))
print(round(d,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:15:50) 
-- CODE:
from numpy import *
from math import *
x = array(eval(input("digite o vetor: ")))
m = sum(x)/size(x)
k = 0
for i in range(size(x)):
	k = (k + ((x[i]-m)**2))
t = sqrt(k/size(x)-1)
print(round(t,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 11:15:59) 
-- CODE:
from numpy import *
from math import *
x = array(eval(input("digite o vetor: ")))
m = sum(x)/size(x)
k = 0
for i in range(size(x)):
	k = (k + ((x[i]-m)**2))
t = sqrt(k/size(x)-1)
print(round(t,3))
-- EXECUTION TIME:
0.989902
-- TEST CASE 1:
---- input:
[-4,250,-1,30,12]
---- correct output:
108.498
---- user output:
97.038
-- TEST CASE 2:
---- input:
[12.5,25.2,50.39,47.3,0.9]
---- correct output:
21.526
---- user output:
19.228
-- TEST CASE 3:
---- input:
[1.5,1.9,1.2,1.3,1.4,1.1,1.75]

---- correct output:
0.29
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:16:50) 
-- CODE:
from numpy import *
from math import *
x = array(eval(input("digite o vetor: ")))
m = sum(x)/size(x)
d = 0
for i in range(size(x)):
	d = (d + ((x[i]-m)**2))
t = sqrt(d/(size(x)-1))
print(round(t,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 11:17:00) 
-- CODE:
from numpy import *
from math import *
x = array(eval(input("digite o vetor: ")))
m = sum(x)/size(x)
d = 0
for i in range(size(x)):
	d = (d + ((x[i]-m)**2))
t = sqrt(d/(size(x)-1))
print(round(t,3))
-- EXECUTION TIME:
1.17192
-- TEST CASE 1:
---- input:
[-4,250,-1,30,12]
---- correct output:
108.498
---- user output:
108.498
-- TEST CASE 2:
---- input:
[12.5,25.2,50.39,47.3,0.9]
---- correct output:
21.526
---- user output:
21.526
-- TEST CASE 3:
---- input:
[1.5,1.9,1.2,1.3,1.4,1.1,1.75]

---- correct output:
0.29
---- user output:
0.29
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
